--- a/hello-react/src/SassComponent.scss
+++ b/hello-react/src/SassComponent.scss
@@ -17,11 +17,11 @@ $violet: #7950f2;
 
 .SassComponent {
   display: flex;
+  background: $oc-gray-2;
+  @include media("<768px") {
+    background: $oc-gray-9;
+  }
   .box {
-    // 일반 CSS에서는 .SassComponent .box와 마찬가지
-    background: red;
-    cursor: pointer;
-    transition: all 0.3s ease-in;
     &.red {
       // .red클래스가 .box와 함께 사용되었을 때
       background: $red;
