--- a/todo-app/src/components/Comments.scss
+++ b/todo-app/src/components/Comments.scss
@@ -1,6 +1,10 @@
-.TodoInsert {
+.Comments {
   display: flex;
-  background: #495057;
+  background: green;
+  .comment {
+    font-size: 1.125rem;
+    color: white;
+  }
   input {
     // 기본 스타일 초기화
     background: none;
@@ -21,8 +25,8 @@
     background: none;
     outline: none;
     border: none;
-    background: #868e96;
-    color: white;
+    background: white;
+    color: green;
     padding-left: 1rem;
     padding-right: 1rem;
     font-size: 1.5rem;
