--- a/todo-app/src/components/Template.scss
+++ b/todo-app/src/components/Template.scss
@@ -1,14 +1,14 @@
 .TodoTemplate {
-  width: 512px;
+  width: 80rem;
   //width가 주어진 상태에서 좌우 중앙 정렬;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 6rem;
+  margin-top: 3rem;
   border-radius: 4px;
   overflow: hidden;
 
   .app-title {
-    background: #22b8cf;
+    background: green;
     color: white;
     height: 4rem;
     font-size: 1.5rem;
