댓글창구현

--- a/todo-app/src/components/Like.scss
+++ b/todo-app/src/components/Like.scss
@@ -1,12 +1,13 @@
 .Like {
   display: flex;
   font-size: 1.125rem;
+  color: rgb(27, 105, 69);
   button {
     background: none;
     outline: none;
     border: none;
     background: white;
-    color: green;
+    color: rgb(35, 165, 104);
     padding-left: 1rem;
     padding-right: 1rem;
     font-size: 1.5rem;
