--- a/todo-app/src/components/Comments.scss
+++ b/todo-app/src/components/Comments.scss
@@ -1,41 +1,61 @@
 .Comments {
-  display: flex;
-  background: green;
+  background: rgb(35, 165, 104);
+
   .comment {
-    font-size: 1.125rem;
-    color: white;
-  }
-  input {
-    // 기본 스타일 초기화
-    background: none;
-    outline: none;
-    border: none;
-    padding: 0.5rem;
-    font-size: 1.125rem;
-    line-height: 1.5;
-    color: white;
-    &::placeholder {
-      color: #dee2e6;
-    }
-    // 버튼을 제외한 영역을 모두 차지하기
-    flex: 1;
-  }
-  button {
-    // 기본 스타일 초기화
-    background: none;
-    outline: none;
-    border: none;
-    background: white;
-    color: green;
-    padding-left: 1rem;
-    padding-right: 1rem;
     font-size: 1.5rem;
-    display: flex;
+    background: white;
+    color: rgb(35, 165, 104);
     align-items: center;
-    cursor: pointer;
-    transition: 0.1s background ease-in;
-    &:hover {
-      background: #adb5bd;
+    line-height: 1.5;
+    button {
+      // 기본 스타일 초기화
+      background: none;
+      outline: none;
+      border: none;
+      background: white;
+      color: rgb(35, 165, 104);
+      padding-left: 1rem;
+      padding-right: 1rem;
+      font-size: 1.5rem;
+      cursor: pointer;
+      text-align: right;
+    }
+  }
+  .gma {
+    display: flex;
+    input {
+      // 기본 스타일 초기화
+      background: none;
+      outline: none;
+      border: none;
+      padding: 0.5rem;
+      font-size: 1.125rem;
+      line-height: 1.5;
+      color: white;
+      &::placeholder {
+        color: #dee2e6;
+      }
+      // 버튼을 제외한 영역을 모두 차지하기
+      flex: 1;
+    }
+    button {
+      // 기본 스타일 초기화
+      background: none;
+      outline: none;
+      border: none;
+      background: white;
+      color: rgb(35, 165, 104);
+      padding-left: 1rem;
+      padding-right: 1rem;
+      font-size: 1.5rem;
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+      display: flex;
+      transition: 0.1s background ease-in;
+      &:hover {
+        background: #adb5bd;
+      }
     }
   }
 }
